added server warm up route
update controllers and swagger, added new route for server warmed up
